--- a/src/Vehicably/appsettings.json
+++ b/src/Vehicably/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "VehicablyDbConnection": "server=192.168.10.230;user=vehicablyAdmin;password=veehicably;database=vehicably_db;persistsecurityinfo=True"
+    "VehicablyDbConnection": "server=192.168.10.230;user=vehicablyAdmin;password=veehicably;database=vehicably_database;persistsecurityinfo=True"
   },
   "AllowedHosts": "*"
 }
