--- a/src/Vehicably.Infrastructure/Vehicably.Infrastructure.csproj
+++ b/src/Vehicably.Infrastructure/Vehicably.Infrastructure.csproj
@@ -16,6 +16,7 @@
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
 		<PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="8.0.2" />
+		<PackageReference Include="System.Text.Json" Version="8.0.5" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -23,7 +24,6 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<Folder Include="DAL\Configurations\" />
 		<Folder Include="Services\Interfaces\" />
 		<Folder Include="Services\Repositories\" />
 	</ItemGroup>
