--- a/src/Vehicably/Vehicably.Api.csproj
+++ b/src/Vehicably/Vehicably.Api.csproj
@@ -9,7 +9,6 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="MediatR" Version="12.4.1" />
 		<PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.10" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.10">
 		  <PrivateAssets>all</PrivateAssets>
@@ -20,19 +19,14 @@
 		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
 		<PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.21.0" />
+		<PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.6" />
 		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.9.0" />
 	</ItemGroup>
 
 	<ItemGroup>
+		<ProjectReference Include="..\..\Vehicably.Application\Vehicably.Application.csproj" />
 		<ProjectReference Include="..\Vehicably.Domain\Vehicably.Domain.csproj" />
 		<ProjectReference Include="..\Vehicably.Infrastructure\Vehicably.Infrastructure.csproj" />
-	</ItemGroup>
-
-	<ItemGroup>
-	  <Folder Include="Interfaces\" />
-	  <Folder Include="Requests\Command\" />
-	  <Folder Include="Requests\CommandHandler\" />
-	  <Folder Include="Services\" />
 	</ItemGroup>
 
 </Project>
